--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: cpp
 compiler:
   - clang
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libnotify-bin libnotify-dev libnotifymm
+  - sudo apt-get update
+  - sudo apt-get install libnotify-bin libnotify-dev libnotifymm
 script: make
