Revert "Travis: Add the libnotifymm package"
This reverts commit d2b3f94c721f196c0263ed577ea373d65c7f6b60.

Conflicts:
	.travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ compiler:
   - clang
 before_install:
   - sudo apt-get update
-  - sudo apt-get install libnotify-bin libnotify-dev libnotifymm
+  - sudo apt-get install libnotify-bin libnotify-dev
 script: make
