Travis: Add a package

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ compiler:
   - clang
 before_install:
   - sudo apt-get update
-  - sudo apt-get install libnotify-bin libnotify-dev
+  - sudo apt-get install libnotify4 libnotify-bin libnotify-dev
 script: make
